--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -48,14 +48,6 @@ layout: default
       {% include news.liquid limit=true %}
     {% endif %}
 
-    <!-- Latest posts -->
-    {% if site.latest_posts.enabled %}
-      <h2>
-        <a href="{{ '/blog/' | relative_url }}" style="color: inherit">latest posts</a>
-      </h2>
-      {% include latest_posts.liquid %}
-    {% endif %}
-
     <!-- Selected papers -->
     {% if page.selected_papers %}
       <h2>
@@ -63,6 +55,13 @@ layout: default
       </h2>
       {% include selected_papers.liquid %}
     {% endif %}
+
+    <!-- Nature photography -->
+    <h2>
+        <a href="{{ '/nature_photography/' | relative_url }}" style="color: inherit">nature photography</a>
+    </h2>
+        <iframe src="https://macaulaylibrary.org/asset/622266018/embed" height="400" width="425" frameborder="0" allowfullscreen></iframe>
+        <iframe src="https://macaulaylibrary.org/asset/613046286/embed" height="400" width="425" frameborder="0" allowfullscreen></iframe>
 
     <!-- Social -->
     {% if page.social %}
